--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-govucom.com
-<br><br>
-Sorry, your IP is blocked
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Govucom</title>
+    <script type="text/javascript">
+        window.location.href = "https://govu.govucom.com/";
+    </script>
+</head>
+<body>
+</body>
+</html>
